# otus-rust

./: Cargo.toml  README.md
examples/: create_report.rs  http_api_example.rs
smart_socket/: Cargo.toml
smart_socket/src/: handler.rs  lib.rs  main.rs  smart_socket.rs
smart_socket_client/: Cargo.toml
smart_socket_client/examples/: main.rs
smart_socket_client/src/: client.rs  command.rs  lib.rs  main.rs  response.rs
smart_thermometer/: Cargo.toml
smart_thermometer/src/: main.rs  smart_thermometer.rs
src/: http_api.rs  lib.rs  main.rs
src/house/: mod.rs  smart_house.rs
src/house/devices/: device.rs  mod.rs  smart_socket.rs  smart_thermometer.rs
temperature_source/: Cargo.toml
temperature_source/src/: main.rs
tests/: integration_test.rs
