[package]
name = "smart_house"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.59"
axum = "0.7.4"
log = "0.4.14"
serde_json = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = {version = "0.12.5", features =["json"]}